# ploto

./: .gitignore  LICENSE  README.md  ploto.cabal
app/: Main.hs
example/: fizzbuzz.ploto  simple.ploto  test.ploto
src/: Lib.hs
src/Ploto/: CoreRuntime.hs  Parser.hs  Types.hs
