name:                ploto
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/tattsun/ploto#readme
license:             BSD3
license-file:        LICENSE
author:              tattsun
maintainer:          t.t.mc1192.sf@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ploto.Parser
                     , Ploto.Types
                     , Ploto.CoreRuntime
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , mtl >= 2.2.1
                     , parsec
                     , template-haskell >= 2.10.0.0
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

executable ploto-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ploto
  default-language:    Haskell2010

test-suite ploto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ploto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tattsun/ploto
